// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cartridge should render correctly 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 300;
  color: #FFF;
  background-color: #004A7C;
  padding: 5px;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Cartridge
    capitalize={false}
    italic={false}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <Styled(Text)
      capitalize={false}
      italic={false}
      opacity={1}
      size="14px"
      uppercase={false}
      weight={300}
    >
      <Text
        capitalize={false}
        className="c0"
        italic={false}
        opacity={1}
        size="14px"
        uppercase={false}
        weight={300}
      >
        <styled.span
          capitalize={false}
          className="c0"
          italic={false}
          opacity={1}
          size="14px"
          uppercase={false}
          weight={300}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="14px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Cartridge>
</ThemeProvider>
`;

exports[`Cartridge should render correctly with capitalize 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: capitalize;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 300;
  color: #FFF;
  background-color: #004A7C;
  padding: 5px;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Cartridge
    capitalize={true}
    italic={false}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <Styled(Text)
      capitalize={true}
      italic={false}
      opacity={1}
      size="14px"
      uppercase={false}
      weight={300}
    >
      <Text
        capitalize={true}
        className="c0"
        italic={false}
        opacity={1}
        size="14px"
        uppercase={false}
        weight={300}
      >
        <styled.span
          capitalize={true}
          className="c0"
          italic={false}
          opacity={1}
          size="14px"
          uppercase={false}
          weight={300}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="14px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Cartridge>
</ThemeProvider>
`;

exports[`Cartridge should render correctly with italic 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: italic;
  color: #545456;
  opacity: 1;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 300;
  color: #FFF;
  background-color: #004A7C;
  padding: 5px;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Cartridge
    capitalize={false}
    italic={true}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <Styled(Text)
      capitalize={false}
      italic={true}
      opacity={1}
      size="14px"
      uppercase={false}
      weight={300}
    >
      <Text
        capitalize={false}
        className="c0"
        italic={true}
        opacity={1}
        size="14px"
        uppercase={false}
        weight={300}
      >
        <styled.span
          capitalize={false}
          className="c0"
          italic={true}
          opacity={1}
          size="14px"
          uppercase={false}
          weight={300}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="14px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Cartridge>
</ThemeProvider>
`;

exports[`Cartridge should render correctly with opacity 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 0.5;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 300;
  color: #FFF;
  background-color: #004A7C;
  padding: 5px;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Cartridge
    capitalize={false}
    italic={false}
    opacity={0.5}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <Styled(Text)
      capitalize={false}
      italic={false}
      opacity={0.5}
      size="14px"
      uppercase={false}
      weight={300}
    >
      <Text
        capitalize={false}
        className="c0"
        italic={false}
        opacity={0.5}
        size="14px"
        uppercase={false}
        weight={300}
      >
        <styled.span
          capitalize={false}
          className="c0"
          italic={false}
          opacity={0.5}
          size="14px"
          uppercase={false}
          weight={300}
        >
          <span
            className="c0 c1"
            opacity={0.5}
            size="14px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Cartridge>
</ThemeProvider>
`;

exports[`Cartridge should render correctly with size 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 300;
  font-size: 18px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 300;
  color: #FFF;
  background-color: #004A7C;
  padding: 5px;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Cartridge
    capitalize={false}
    italic={false}
    opacity={1}
    size="18px"
    uppercase={false}
    weight={300}
  >
    <Styled(Text)
      capitalize={false}
      italic={false}
      opacity={1}
      size="18px"
      uppercase={false}
      weight={300}
    >
      <Text
        capitalize={false}
        className="c0"
        italic={false}
        opacity={1}
        size="18px"
        uppercase={false}
        weight={300}
      >
        <styled.span
          capitalize={false}
          className="c0"
          italic={false}
          opacity={1}
          size="18px"
          uppercase={false}
          weight={300}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="18px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Cartridge>
</ThemeProvider>
`;

exports[`Cartridge should render correctly with uppercase 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: uppercase;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 300;
  color: #FFF;
  background-color: #004A7C;
  padding: 5px;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Cartridge
    capitalize={false}
    italic={false}
    opacity={1}
    size="14px"
    uppercase={true}
    weight={300}
  >
    <Styled(Text)
      capitalize={false}
      italic={false}
      opacity={1}
      size="14px"
      uppercase={true}
      weight={300}
    >
      <Text
        capitalize={false}
        className="c0"
        italic={false}
        opacity={1}
        size="14px"
        uppercase={true}
        weight={300}
      >
        <styled.span
          capitalize={false}
          className="c0"
          italic={false}
          opacity={1}
          size="14px"
          uppercase={true}
          weight={300}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="14px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Cartridge>
</ThemeProvider>
`;
